// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnakeGame Snapshot Tests can move down then left: 1-down 1`] = `
"          
          
          
          
     #    
     ▼    
          
          
          
          "
`;

exports[`SnakeGame Snapshot Tests can move down then left: 1-left 1`] = `
"          
          
          
          
     #    
    ◀#    
          
          
          
          "
`;

exports[`SnakeGame Snapshot Tests can move down then left: initial 1`] = `
"          
          
          
          
     ▲    
     #    
          
          
          
          "
`;

exports[`SnakeGame Snapshot Tests can move down: 1-down 1`] = `
"          
          
          
          
     #    
     ▼    
          
          
          
          "
`;

exports[`SnakeGame Snapshot Tests can move down: initial 1`] = `
"          
          
          
          
     ▲    
     #    
          
          
          
          "
`;

exports[`SnakeGame Snapshot Tests can move left: 1-down 1`] = `
"          
          
          
          
     #    
     ▼    
          
          
          
          "
`;

exports[`SnakeGame Snapshot Tests can move left: initial 1`] = `
"          
          
          
          
     ▲    
     #    
          
          
          
          "
`;

exports[`SnakeGame Snapshot Tests can start a 10x10 game: initial 1`] = `
"          
          
          
          
          
     ▲    
          
          
          
          "
`;

exports[`SnakeGame Snapshot Tests can start a default size game: initial 1`] = `
"           
           
           
           
           
           
      ▲    
           
           
           
           "
`;

exports[`SnakeGame Snapshot Tests handles JSON output mode: part-1 1`] = `
Object {
  "grid": Array [
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      "▲",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      "#",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      "#",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
  ],
  "moves": Array [
    "up",
    "up",
  ],
  "snake": Object {
    "cells": Array [
      Object {
        "x": 6,
        "y": 4,
      },
      Object {
        "x": 6,
        "y": 5,
      },
      Object {
        "x": 6,
        "y": 6,
      },
    ],
    "direction": "up",
  },
}
`;

exports[`SnakeGame Snapshot Tests handles JSON output mode: part-2 1`] = `
Object {
  "grid": Array [
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      "◀",
      "#",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      "#",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      "#",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
  ],
  "moves": Array [
    "up",
    "up",
    "left",
  ],
  "snake": Object {
    "cells": Array [
      Object {
        "x": 5,
        "y": 4,
      },
      Object {
        "x": 6,
        "y": 4,
      },
      Object {
        "x": 6,
        "y": 5,
      },
      Object {
        "x": 6,
        "y": 6,
      },
    ],
    "direction": "left",
  },
}
`;

exports[`SnakeGame Snapshot Tests handles JSON output mode: part-3 1`] = `
Object {
  "grid": Array [
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      "#",
      "#",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      "▼",
      "#",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      "#",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
    Array [
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
      " ",
    ],
  ],
  "moves": Array [
    "up",
    "up",
    "left",
    "down",
  ],
  "snake": Object {
    "cells": Array [
      Object {
        "x": 5,
        "y": 5,
      },
      Object {
        "x": 5,
        "y": 4,
      },
      Object {
        "x": 6,
        "y": 4,
      },
      Object {
        "x": 6,
        "y": 5,
      },
      Object {
        "x": 6,
        "y": 6,
      },
    ],
    "direction": "down",
  },
}
`;

exports[`SnakeGame Snapshot Tests handles multi-step navigation changes: part-1 1`] = `
"          
          
     ▲    
     #    
     #    
     #    
          
          
          
          "
`;

exports[`SnakeGame Snapshot Tests handles multi-step navigation changes: part-2 1`] = `
"          
          
     ###▶︎ 
     #    
     #    
     #    
          
          
          
          "
`;

exports[`SnakeGame Snapshot Tests handles multi-step navigation changes: part-3 1`] = `
"          
          
     #### 
     #  # 
     #  ▼ 
     #    
          
          
          
          "
`;

exports[`SnakeGame Snapshot Tests throws on invalid direction: before-invalid-direction 1`] = `
"           
           
           
           
           
      ▲    
      #    
           
           
           
           "
`;
